--- a/Inmobiliaria/war/index.html
+++ b/Inmobiliaria/war/index.html
@@ -86,7 +86,7 @@
 		<div class="main-container">
 		<a id="hero-slider" class="in-page-link"></a>
 			
-			<section class="hero-slider">
+			<!-- <section class="hero-slider">
 				<ul class="slides">
 					
 					
@@ -138,6 +138,11 @@
 						</div>
 					</li>
 				</ul>
+			</section>-->
+			<section>
+			<div align="center">
+								<img alt="Background Image" src="img/inmuebles.jpg" align="middle" >
+							</div>
 			</section>
 			
 			<section class="feature-selector">
