--- a/Inmobiliaria/war/about.html
+++ b/Inmobiliaria/war/about.html
@@ -7,7 +7,7 @@
 <html class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-        <title>Real Estate Template | About</title>
+        <title>DIY Inmobiliaria | About</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -88,7 +88,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 text-center">
-							<h1>About Our Team</h1>
+							<h1>Acerca de nosotros</h1>
 						</div>
 					</div>
 					
@@ -96,10 +96,10 @@
 						<div class="col-sm-4">
 							<div class="team-1-member">
 								<img alt="Team Member" src="img/team_1.png ">
-								<h2>Sarah May</h2>
-								<h5>CEO</h5>
+								<h2>Agente 1</h2>
+								<h5>Puesto</h5>
 								<p class="space-top-small">
-									Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+									Seccion Disponible
 								</p>
 							</div>
 						</div>
@@ -107,10 +107,11 @@
 						<div class="col-sm-4">
 							<div class="team-1-member">
 								<img alt="Team Member" src="img/team_2.png ">
-								<h2>Thomas Brown</h2>
-								<h5>Creative Director</h5>
+								<h2>Agente 2</h2>
+								<h5>Puesto</h5>
 								<p class="space-top-small">
-									Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+								Seccion Disponible
+
 								</p>
 							</div>
 						</div>
@@ -118,10 +119,11 @@
 						<div class="col-sm-4">
 							<div class="team-1-member">
 								<img alt="Team Member" src="img/team_3.png ">
-								<h2>Howard Branson</h2>
-								<h5>PR Specialist</h5>
+								<h2>Agente 3</h2>
+								<h5>Puesto</h5>
 								<p class="space-top-small">
-									Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+								Seccion Disponible
+
 								</p>
 							</div>
 						</div>
